src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Can_Publish_Externally__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Publish Externally?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TC1 Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UAT_Team__c</fullName>
        <label>UAT Team</label>
        <picklist>
            <picklistValues>
                <fullName>Fix Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPH Testers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPH Champions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offshore UAT Coordinator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>User External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Exempted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to flag user to be excluded from the validation rule</description>
        <label>Validation Exempted?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_Vendor_Reps</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.IS_PARTNER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Vendor Reps</label>
    </listViews>
    <listViews>
        <fullName>CSOSSOTEST</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>circs_autoresponse@sph.com.sg</value>
        </filters>
        <label>CSO-SSO TEST</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>